@@ -90,9 +90,9 @@ def getmass(N, z, massfunc='zfourge'):
     if isinstance(N, np.ndarray) or isinstance(N, list):
         mass = np.zeros([len(N)])
         for i, elem in enumerate(N):
-            mass[i] = newton(mf, 10., args=(z,elem))
+            mass[i] = newton(getnum, 10., args=(z,massfunc,elem))
     else:
-        mass = newton(mf, 10., args=(z,N))
+        mass = newton(getnum, 10., args=(z,massfunc,N))
 
     return mass
 
@@ -151,9 +151,16 @@ def getnum_muzzin(M, z):
 
 def muzzinparams(z, type='total'):
     zarr = np.array([0.35, 0.75, 1.25, 1.75, 2.25, 2.75, 3.5]) 
-    Mchar = np.array([10.97, 11., 10.87, 10.81, 10.81, 11.03, 11.49])
-    P1 = np.array([16.27, 16.25, 13.91, 10.13, 4.79, 1.93, 0.09])*1.e-4
-    a1 = np.array([-0.53, -1.17, -1.02, -0.86, -0.55, -1.01, -1.45])
+    # Alpha free
+    # Mchar = np.array([10.97, 11., 10.87, 10.81, 10.81, 11.03, 11.49])
+    # P1 = np.array([16.27, 16.25, 13.91, 10.13, 4.79, 1.93, 0.09])*1.e-4
+    # a1 = np.array([-0.53, -1.17, -1.02, -0.86, -0.55, -1.01, -1.45])
+    # P2 = np.array([9.47, 0., 0., 0., 0., 0., 0.])*1.e-4
+    # a2 = np.array([-1.37, -1.2, -1.2, -1.2, -1.2, -1.2, -1.2])
+    # Alpha fixed
+    Mchar = np.array([10.97, 11.04, 10.99, 10.96, 11., 11.09, 11.4]) 
+    P1 = np.array([16.27, 14.48, 9.30, 6.33, 2.94, 1.66, 0.13])*1.e-4
+    a1 = np.array([-0.53, -1.2, -1.2, -1.2, -1.2, -1.2, -1.2])
     P2 = np.array([9.47, 0., 0., 0., 0., 0., 0.])*1.e-4
     a2 = np.array([-1.37, -1.2, -1.2, -1.2, -1.2, -1.2, -1.2])
 
@@ -219,6 +226,7 @@ def getnum_zfourge(M, z):
 # of the neighboring redshift bins
 def zfourgeparams(z, type='total'):
     zarr = np.array([0.35, 0.625, 0.875, 1.125, 1.375, 1.75, 2.25, 2.75]) 
+    # Double-Schechter at z > 2
     if type == 'star-forming':
         Mchar = np.array([10.59, 10.65, 10.56, 10.44, 10.69, 10.59, 10.58, 10.61])
         a1 = np.array([-1.08, -0.97, -0.46, 0.53, -0.55, 0.75, 2.06, 2.36])
@@ -237,6 +245,26 @@ def zfourgeparams(z, type='total'):
         P1 = np.array([-2.54, -2.55, -2.56, -2.72, -2.78, -3.05, -3.80, -4.54])
         a2 = np.array([-1.90, -1.53, -1.61, -1.45, -1.56, -1.49, -1.33, -1.57])
         P2 = np.array([-4.29, -3.15, -3.39, -3.17, -3.43, -3.38, -3.26, -3.69])
+
+    # # Single-Schechter at z > 2
+    # if type == 'star-forming':
+    #     Mchar = np.array([10.59, 10.65, 10.56, 10.44, 10.69, 10.59, 11.28, 11.49])
+    #     a1 = np.array([-1.08, -0.97, -0.46, 0.53, -0.55, 0.75, -1.6, -1.93])
+    #     P1 = np.array([-2.67, -2.97, -2.81, -2.98, -3.04, -3.37, -3.96, -4.82])
+    #     a2 = np.array([-2.00, -1.58, -1.61, -1.44, -1.62, -1.47, -1.38, -1.67])
+    #     P2 = np.array([-4.46, -3.34, -3.36, -3.11, -3.59, -3.28, -50., -50.])
+    # elif type == 'quiescent':
+    #     Mchar = np.array([10.75, 10.68, 10.63, 10.63, 10.49, 10.77, 10.73, 10.65]) 
+    #     a1 = np.array([-0.47, -0.10, 0.04, 0.11, 0.85, -0.19, -0.49, -0.43]) 
+    #     P1 = np.array([-2.76, -2.67, -2.81, -3.03, -3.36, -3.41, -3.63, -3.92])
+    #     a2 = np.array([-1.97, -1.69, -1.51, -1.57, -0.54, -0.18, -3.07, 2.51])
+    #     P2 = np.array([-5.21, -4.29, -4.40, -4.80, -3.72, -3.91, -50., -50.])
+    # else:   # Total
+    #     Mchar = np.array([10.78, 10.70, 10.66, 10.54, 10.61, 10.74, 11.13, 11.35])
+    #     a1 = np.array([-0.98, -0.39, -0.37, 0.30 , -0.12, 0.04, -1.43, -1.74])
+    #     P1 = np.array([-2.54, -2.55, -2.56, -2.72, -2.78, -3.05, -3.59, -4.36])
+    #     a2 = np.array([-1.90, -1.53, -1.61, -1.45, -1.56, -1.49, -1.33, -1.57])
+    #     P2 = np.array([-4.29, -3.15, -3.39, -3.17, -3.43, -3.38, -50., -50.])
 
     if z < zarr[0]:
         return [0, Mchar[0], a1[0], P1[0], a2[0], P2[0]], [zarr[0], Mchar[0], a1[0], P1[0], a2[0], P2[0]]
